Part_1/Logs/server_output.log
  File "/home/baadalvm/Networks-A4/Part_1/p1_server.py", line 122
    break
    ^^^^^
SyntaxError: 'break' outside loop
